[project]
name = "pybalboa"
description = "Module to communicate with a Balboa spa wifi adapter."
authors = [
    { name = "Nathan Spencer", email = "natekspencer@gmail.com" },
    { name = "Tim Rightnour", email = "root@garbled.net" },
]
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "Balboa",
    "spa",
    "hot tub",
    "asynchronous",
]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/garbled1/pybalboa"
Repository = "https://github.com/garbled1/pybalboa"

[dependency-groups]
dev = [
    "pytest>=7.2.2,<9.0.0",
    "pytest-asyncio>=0.20.3,<1.1.0",
    "pytest-cov>=4,<7",
    "pytest-timeout>=2.1.0,<3",
    "mypy>=1.3,<2",
    "tox>=3.26,<5.0",
    "ruff>=0.15.0",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.version]
path = "pybalboa/__init__.py"
pattern = true

[tool.hatch.build.targets.sdist]
include = ["pybalboa"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"